--- a/checkout.html
+++ b/checkout.html
@@ -17,8 +17,14 @@
                 <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
-                <label for="address">Address:</label>
-                <input type="text" id="address" name="address" required>
+                <label for="pickup-station">Pickup Station:</label>
+                <select id="pickup-station" name="pickup-station" required>
+                    <option value="" disabled selected>Select a pickup station</option>
+                    <option value="The nord mall">The nord mall</option>
+                    <option value="Nairobi Odeon"> Nairobi Odeon </option>
+                    <option value="Greenspot Kamakis">Greenspot Kamakis</option>
+                    <option value="Thika Ananas Mall">Thika Ananas Mall</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="phone">Phone:</label>
@@ -46,6 +52,9 @@
             <span class="close" id="close-modal">&times;</span>
             <h2>Thank You!</h2>
             <p>Your order has been placed successfully.</p>
+            <p>Order ID: <span id="order-id"></span></p>
+            <p>Order Details:</p>
+            <div id="order-details"></div>
             <p>Welcome again!</p>
             <button id="close-modal-button">Close</button>
         </div>
@@ -56,13 +65,46 @@
         const modal = document.getElementById('confirmation-modal');
         const closeModalButton = document.getElementById('close-modal-button');
         const closeModalSpan = document.getElementById('close-modal');
+        const orderDetailsContainer = document.getElementById('order-details');
+        const orderIdElement = document.getElementById('order-id');
+
+        // Function to generate a unique order ID
+        function generateOrderId() {
+            const timestamp = Date.now(); // Current timestamp
+            const randomNum = Math.floor(Math.random() * 10000); // Random number
+            return `ORD-${timestamp}-${randomNum}`; // Format: ORD-<timestamp>-<randomNum>
+        }
 
         form.addEventListener('submit', (e) => {
             e.preventDefault();
 
             const paymentMethod = form.payment.value;
+            const pickupStation = form['pickup-station'].value; // Get selected pickup station
 
             if (paymentMethod === 'cod') {
+                // Load cart details
+                const cart = JSON.parse(localStorage.getItem("checkoutCart")) || [];
+                orderDetailsContainer.innerHTML = ""; // Clear previous details
+
+                if (cart.length === 0) {
+                    orderDetailsContainer.innerHTML = "<p>No items in the cart.</p>";
+                } else {
+                    cart.forEach(item => {
+                        const itemDiv = document.createElement("div");
+                        itemDiv.innerHTML = `<strong>${item.name}</strong> - ${item.price} KShs x ${item.quantity}`;
+                        orderDetailsContainer.appendChild(itemDiv);
+                    });
+                }
+
+                // Generate and display the order ID
+                const orderId = generateOrderId();
+                orderIdElement.textContent = orderId;
+
+                // Display selected pickup station
+                const pickupStationDiv = document.createElement("div");
+                pickupStationDiv.innerHTML = `<strong>Pickup Station:</strong> ${pickupStation}`;
+                orderDetailsContainer.appendChild(pickupStationDiv);
+
                 // Show the confirmation modal
                 modal.style.display = 'block';
             } else {
@@ -73,12 +115,12 @@
         // Close modal and redirect to order tracking page
         closeModalButton.addEventListener('click', () => {
             modal.style.display = 'none';
-            window.location.href = 'order-tracking.html'; // Redirect to order tracking page
+            window.location.href = 'ordertracking.html'; // Redirect to order tracking page
         });
 
         closeModalSpan.addEventListener('click', () => {
             modal.style.display = 'none';
-            window.location.href = 'order-tracking.html'; // Redirect to order tracking page
+            window.location.href = 'ordertracking.html'; // Redirect to order tracking page
         });
     </script>
 </body>
