--- a/dog.html
+++ b/dog.html
@@ -36,7 +36,7 @@
          <div class="data">
             <div class="top">
                 <p>ADULT DOG FOOD</p>
-                <a href="cart.html"><i class="fa-solid fa-bag-shopping cart-icon"></i></a>
+                <a href="cart.php"><i class="fa-solid fa-bag-shopping cart-icon"></i></a>
             </div>
             <div class="header">
                 <div class="dog-grid">
