--- a/checkout.html
+++ b/checkout.html
@@ -21,7 +21,7 @@
                 <select id="pickup-station" name="pickup-station" required>
                     <option value="" disabled selected>Select a pickup station</option>
                     <option value="The nord mall">The nord mall</option>
-                    <option value="Nairobi Odeon"> Nairobi Odeon </option>
+                    <option value="Nairobi Odeon">Nairobi Odeon</option>
                     <option value="Greenspot Kamakis">Greenspot Kamakis</option>
                     <option value="Thika Ananas Mall">Thika Ananas Mall</option>
                 </select>
@@ -68,59 +68,65 @@
         const orderDetailsContainer = document.getElementById('order-details');
         const orderIdElement = document.getElementById('order-id');
 
-        // Function to generate a unique order ID
-        function generateOrderId() {
-            const timestamp = Date.now(); // Current timestamp
-            const randomNum = Math.floor(Math.random() * 10000); // Random number
-            return `ORD-${timestamp}-${randomNum}`; // Format: ORD-<timestamp>-<randomNum>
-        }
-
         form.addEventListener('submit', (e) => {
             e.preventDefault();
 
-            const paymentMethod = form.payment.value;
-            const pickupStation = form['pickup-station'].value; // Get selected pickup station
+            const formData = {
+                name: form.name.value,
+                pickup_station: form['pickup-station'].value,
+                phone: form.phone.value,
+                payment: form.payment.value
+            };
 
-            if (paymentMethod === 'cod') {
-                // Load cart details
-                const cart = JSON.parse(localStorage.getItem("checkoutCart")) || [];
-                orderDetailsContainer.innerHTML = ""; // Clear previous details
+            // Send the order data to the server
+            fetch('process_order.php', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(formData)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    // Display the Order ID in the modal
+                    orderIdElement.textContent = data.order_id;
 
-                if (cart.length === 0) {
-                    orderDetailsContainer.innerHTML = "<p>No items in the cart.</p>";
+                    // Load cart details (assuming you have a cart in local storage)
+                    const cart = JSON.parse(localStorage.getItem("checkoutCart")) || [];
+                    orderDetailsContainer.innerHTML = ""; // Clear previous details
+
+                    if (cart.length === 0) {
+                        orderDetailsContainer.innerHTML = "<p>No items in the cart.</p>";
+                    } else {
+                        cart.forEach(item => {
+                            const itemDiv = document.createElement("div");
+                            itemDiv.innerHTML = `<strong>${item.name}</strong> - ${item.price} KShs x ${item.quantity}`;
+                            orderDetailsContainer.appendChild(itemDiv);
+                        });
+                    }
+
+                    // Show the confirmation modal
+                    modal.style.display = 'block';
                 } else {
-                    cart.forEach(item => {
-                        const itemDiv = document.createElement("div");
-                        itemDiv.innerHTML = `<strong>${item.name}</strong> - ${item.price} KShs x ${item.quantity}`;
-                        orderDetailsContainer.appendChild(itemDiv);
-                    });
+                    alert('Error placing order: ' + data.error);
                 }
-
-                // Generate and display the order ID
-                const orderId = generateOrderId();
-                orderIdElement.textContent = orderId;
-
-                // Display selected pickup station
-                const pickupStationDiv = document.createElement("div");
-                pickupStationDiv.innerHTML = `<strong>Pickup Station:</strong> ${pickupStation}`;
-                orderDetailsContainer.appendChild(pickupStationDiv);
-
-                // Show the confirmation modal
-                modal.style.display = 'block';
-            } else {
-                // Handle PayPal payment logic here
-            }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An error occurred while placing your order.');
+            });
         });
 
         // Close modal and redirect to order tracking page
         closeModalButton.addEventListener('click', () => {
             modal.style.display = 'none';
-            window.location.href = 'ordertracking.html'; // Redirect to order tracking page
+            window.location.href = 'ordertrack.html'; // Redirect to order tracking page
         });
 
         closeModalSpan.addEventListener('click', () => {
             modal.style.display = 'none';
-            window.location.href = 'ordertracking.html'; // Redirect to order tracking page
+            window.location.href = 'ordertrack.html'; // Redirect to order tracking page
         });
     </script>
 </body>
